Fix layout problem in "Visit Us" section
iframe and image were extending beyond their parent container, screwing
with the layout

--- a/source/scss/_about.scss
+++ b/source/scss/_about.scss
@@ -36,9 +36,6 @@
 }
 
 #visit-section {
-	.row {
-		height: 242px;
-	}
 	#map iframe {
 		width: 100%;
 		height: 400px;
